# The-Box-Factory

./: .gitignore  CMakeLists.txt  README  convert.sh
data/: WOD.XM
gamelib/: .BoxFactory.cpp.swp  .BoxFactory.h.swp  AI.cpp  AI.h  Algebra.cpp  Algebra.h  BoxFactory.cpp  BoxFactory.h  CMakeLists.txt  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Lua488.h  Macro.h  Material.cpp  Material.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  Scene.cpp  Scene.h  SceneLua.cpp  SceneLua.h  SoundManager.cpp  SoundManager.h  Textures.h
gamelib/glm/: CTestTestfile.cmake
glsl/: color.fs.glsl  color.vs.glsl  common.vs.glsl  texture.fs.glsl  texture.vs.glsl
gui/: CMakeLists.txt  GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
models/: bullet.lua  character1.lua  character2.lua  character3.lua  character4.lua  chunk_bigger.lua  chunk_little.lua  chunk_medium.lua  chunk_sparks.lua  enemy.lua  enemy_bullet.lua  enemy_pistol.lua  enemy_sword_fast.lua  level.lua  shield.lua  shield_minor.lua
sdl/: CMakeLists.txt  main.cpp
sdl2/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  HelloWidget.cpp  HelloWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
