CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(PLAYBOOK)


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS_PROFILE -pg)

ADD_DEFINITIONS(-Wall -Werror -Weffc++ -pedantic -std=c++0x)

LINK_DIRECTORIES( ${PROJECT_BINARY_DIR}/lib )

INCLUDE_DIRECTORIES( ${PROJECT_BINARY_DIR}/gamelib )

# Build gamelib first
ADD_SUBDIRECTORY( gamelib )

# GUI loads from the gamelib library
ADD_SUBDIRECTORY( gui )
