# QT4 Handling
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(SDL REQUIRED)

# General
SET(BF_SDL_SRC
    main.cpp
)

SET(BF_SDL_LIB
    ${LUA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${PNG_LIBRARIES}
    ${SDL_LIBRARY}
)

ADD_EXECUTABLE( bfsdl ${BF_SDL_SRC} )
TARGET_LINK_LIBRARIES( bfsdl
                       ${LIBRARY_OUTPUT_PATH}/libboxfactory.a
                       ${BF_SDL_LIB})
